Atualizando erro de português

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </ul>
 
     <ul>
-        <div class="subtitulo">Qualificaç]oes e conheicmentos</div>
+        <div class="subtitulo">Qualificações e conhecimentos</div>
         <li>
             ►Fluência em português, inglês e espanhol pelo CCAA - 1999/2009
         </li>
