Adicionando curso Cisco Cybersecurity Essentials

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <li>
             ►DIO - Database Experience(SQL - NoSQL)(09/2022)
         </li>
+        <li>
+            ►Cisco - Cybersecurity Essentials (2022)
+        </li>
     
     </ul>
 
