--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
             ►JavaScript
         </li>
         <li>
+            ►TypeScript
+        </li>
+        <li>
+            ►React
+        </li>
+        <li>
+            ►NextJS
+        </li>
+        <li>
             ►SQL(MySQL, PostgreSQL)
         </li>
         <li>
