--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://linkedin.com/in/ruan-finamor-09853397" target="_blank">🔗 LinkedIn</a> |
       <a href="https://github.com/RuanF7" target="_blank">💻 GitHub</a> |
       <a href="https://ruanf7.github.io/ProjetoPortfolio/" target="_blank">🌐 Portfólio</a> |
-      <a href="./CurrículoPT.pdf" download target="_blank">📄 Currículo PDF</a>
+      <a href="./Currículo-PT.pdf" download target="_blank">📄 Currículo PDF</a>
     </div>
   </header>
 
